--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Limbus Helper</string>
+    <string name="res_ineff">Ineff.</string>
+    <string name="res_normal">Normal</string>
+    <string name="res_fatal">Fatal</string>
 </resources>
