--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="res_fatal">Fatal</string>
     <string name="undo_delete">UNDO</string>
     <string name="removed_from_party">removed from party</string>
+    <string name="active_only">Active Only</string>
 </resources>
