Add Ripple to BottomNavBar Items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="removed_from_party">removed from party</string>
     <string name="active_only">Active Only</string>
     <string name="empty_party">"Your party is empty.\nStart with filter screen and something here."</string>
+    <string name="party">Party</string>
+    <string name="filter">Filter</string>
 </resources>
