--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="res_normal">Normal</string>
     <string name="res_fatal">Fatal</string>
     <string name="undo_delete">UNDO</string>
-    <string name="removed_from_party">removed from party</string>
+    <string name="removed_from_party">%s removed from party</string>
     <string name="active_only">Active Only</string>
     <string name="empty_party">"Your party is empty.\nStart with filter screen and something here."</string>
     <string name="party">Party</string>
