--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="res_ineff">Ineff.</string>
     <string name="res_normal">Normal</string>
     <string name="res_fatal">Fatal</string>
+    <string name="res_endure">Endure</string>
     <string name="undo_delete">UNDO</string>
     <string name="removed_from_party">%s removed from party</string>
     <string name="active_only">Active Only</string>
